# bright-ir-fusion

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generate_version.bat  generate_version.ps1  project_rules.md  test_report.md  version.ini
.trae/rules/: project_rules.md
docs/: GIT_GUIDE.md  iteration_1_plan.md  project_plan.md
include/: camera.h  controls.h  display.h  ui_manager.h  version_manager.h
src/: camera.cpp  controls.cpp  display.cpp  main.cpp  ui_manager.cpp
tests/: test_cli.bat  test_cli.ps1  test_cli_final.ps1  test_cli_simple.ps1
